--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,21 +1,88 @@
-<form (ngSubmit)="login()">
-  <label for="username">Nombre de usuario:</label>
-  <input
-    type="text"
-    id="username"
-    [(ngModel)]="username"
-    name="username"
-    required
-  />
+<section class="h-100">
+  <div class="container h-100">
+    <div class="row justify-content-sm-center h-100">
+      <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
+        <div class="text-center my-5">
+          <img
+            src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg"
+            alt="logo"
+            width="100"
+          />
+        </div>
+        <div class="card shadow-lg">
+          <div class="card-body p-5">
+            <h1 class="fs-4 card-title fw-bold mb-4">Inicio de sesión</h1>
+            <form
+              (ngSubmit)="login()"
+              method="POST"
+              class="needs-validation"
+              novalidate=""
+              autocomplete="off"
+            >
+              <div class="mb-3">
+                <label class="mb-2 text-muted" for="username"
+                  >Nombre de usuario:</label
+                >
+                <input
+                  id="username"
+                  type="username"
+                  [(ngModel)]="username"
+                  class="form-control"
+                  name="username"
+                  value=""
+                  required
+                  autofocus
+                />
+                <div class="invalid-feedback">Nombre de usuario</div>
+              </div>
 
-  <label for="password">Contraseña:</label>
-  <input
-    type="password"
-    id="password"
-    [(ngModel)]="password"
-    name="password"
-    required
-  />
+              <div class="mb-3">
+                <div class="mb-2 w-100">
+                  <label class="text-muted" for="password">Contraseña:</label>
+                  <a href="forgot.html" class="float-end">
+                    ¿Has olvidado tu contraseña?
+                  </a>
+                </div>
+                <input
+                  id="password"
+                  type="password"
+                  [(ngModel)]="password"
+                  class="form-control"
+                  name="password"
+                  required
+                />
+                <div class="invalid-feedback">Se requiere contraseña</div>
+              </div>
 
-  <button type="submit">Iniciar sesión</button>
-</form>
+              <div class="d-flex align-items-center">
+                <div class="form-check">
+                  <input
+                    type="checkbox"
+                    name="remember"
+                    id="remember"
+                    class="form-check-input"
+                  />
+                  <label for="remember" class="form-check-label"
+                    >Acuérdate de mí</label
+                  >
+                </div>
+                <button type="submit" class="btn btn-primary ms-auto">
+                  Iniciar sesión
+                </button>
+              </div>
+            </form>
+          </div>
+          <div class="card-footer py-3 border-0">
+            <div class="text-center">
+              ¿No tienes una cuenta?
+              <a href="register.html" class="text-white"> Crea una</a>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-5 text-muted">
+          Copyright &copy; 2024-2050 &mdash; Your Company
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
